--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -1,14 +1,7 @@
-apply plugin: 'java'
-compileJava.options.encoding = 'UTF-8'
-compileTestJava.options.encoding = 'UTF-8'
 
-version = '1.0'
 
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile 'com.github.stefanbirkner:system-rules:1.12.1'
+allprojects {
+    repositories {
+        jcenter()
+    }
 }
