--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -1,7 +1,20 @@
 allprojects {
     apply plugin: 'java'
+    compileJava.options.encoding = 'UTF-8'
+    compileTestJava.options.encoding = 'UTF-8'
+
 
     repositories {
         jcenter()
+    }
+
+    dependencies {
+        testCompile group: 'junit', name: 'junit', version: '4.12'
+        compile fileTree(dir: '../libs', include: ['*.jar'])
+        compile fileTree(dir: 'libs', include: ['*.jar'])
+    }
+
+    jar {
+        manifest.attributes provider: 'gradle'
     }
 }
