--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -1,4 +1,13 @@
-allprojects {
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:1.3.0'
+    }
+}
+
+configure(allprojects - project(':android')) {
     apply plugin: 'java'
     compileJava.options.encoding = 'UTF-8'
     compileTestJava.options.encoding = 'UTF-8'
